# xor-trading

./: .gitignore  README.md  TODO.md
.github/workflows/: ci.yml
backend/: .dockerignore  alembic.ini  requirements.txt  run_tests.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  auth.py  events.py  exceptions.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  api_credential.py  audit_log.py  bot.py  order.py  position.py  strategy.py  trade.py  user.py
backend/app/schemas/: __init__.py  bot.py  common.py  order.py  strategy.py  user.py
backend/app/services/: __init__.py  bot_service.py  order_service.py  user_service.py
backend/tests/: conftest.py  test_auth.py  test_security.py  test_user_service.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  SECURITY.md
exchange-adapter/adapters/: __init__.py  base.py
exchange-adapter/adapters/bybit/: __init__.py
execution-engine/: Cargo.toml  Dockerfile
execution-engine/src/: config.rs  main.rs
execution-engine/src/order_router/: mod.rs
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
infrastructure/docker/: .env.example  docker-compose.yml
risk-engine/: Dockerfile  requirements.txt
risk-engine/engine/: __init__.py  core.py  kill_switch.py
strategy-engine/: .dockerignore  requirements.txt
strategy-engine/engine/: __init__.py  core.py  event_bus.py
(+29 files in other folders)
