[package]
name = "xor-execution-engine"
version = "1.0.0"
edition = "2021"
description = "High-performance order execution engine for XOR Trading Platform"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
